--- a/TrashCollector/Views/Customers/Create.cshtml
+++ b/TrashCollector/Views/Customers/Create.cshtml
@@ -35,28 +35,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="PickupDay" class="control-label"></label>
-                <select asp-for="PickupDay" class="form-control"></select>
+                <select asp-for="PickupDay" asp-items="Html.GetEnumSelectList<DayOfWeek>()"></select>
                 <span asp-validation-for="PickupDay" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
+                <select asp-for="PickupDay" class="form-control" asp-items="DropModel.PickupDay.Sunday)"></select>
                 <label asp-for="OneTimePickup" class="control-label"></label>
                 <input asp-for="OneTimePickup" class="form-control" />
                 <span asp-validation-for="OneTimePickup" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="OneTimePickupUsed" /> @Html.DisplayNameFor(model => model.OneTimePickupUsed)
-                </label>
-            </div>
-            <div class="form-group">
-                <label asp-for="MonthlyBalanceOwed" class="control-label"></label>
-                <input asp-for="MonthlyBalanceOwed" class="form-control" />
-                <span asp-validation-for="MonthlyBalanceOwed" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdentityUserId" class="control-label"></label>
-                <select asp-for="IdentityUserId" class ="form-control" asp-items="ViewBag.IdentityUserId"></select>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
