--- a/TrashCollector/Views/Customers/Details.cshtml
+++ b/TrashCollector/Views/Customers/Details.cshtml
@@ -63,4 +63,6 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.CustomerId">Edit</a> |
+    <a asp-action="SetSuspendDate" asp-route-id="@Model.CustomerId">Suspend Pickup</a>
+
 </div>
