Added starting default date selection.

--- a/TrashCollector/Views/Customers/Edit.cshtml
+++ b/TrashCollector/Views/Customers/Edit.cshtml
@@ -48,7 +48,7 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="OneTimePickupUsed" /> @Html.Raw("Use One-Time Pickup?")
+                    <input class="form-check-input" asp-for="OneTimePickupUsed" /> Use One-Time Pickup?
                 </label>
             </div>
             <div class="form-group">
