--- a/TrashCollector/Views/Employees/PickupsForToday.cshtml
+++ b/TrashCollector/Views/Employees/PickupsForToday.cshtml
@@ -1,15 +1,20 @@
 ﻿@model IEnumerable<TrashCollector.Models.Customer>
 
 @{
-    ViewData["Title"] = "PickupsForToday";
+    ViewData["Title"] = "Pickups For Today";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Pickups For Today</h1>
+<h1>Pickups For @DateTime.Today.ToShortDateString()</h1>
 
-<p>
-    
-</p>
+
+@*<div class="form-group">
+    <div>
+        Find by Day of Week: @Html.DropDownList("Day of Week", Html.GetEnumSelectList<DayOfWeek>(), null, new { onChange = "PickupDay = this.value;"})
+    </div>
+    <input type="submit" value="Search" />
+</div>*@
+
 <table class="table">
     <thead>
         <tr>
@@ -26,16 +31,10 @@
                 @Html.DisplayNameFor(model => model.ZipCode)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PickupDay)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.OneTimePickup)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OneTimePickupUsed)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MonthlyBalanceOwed)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.SuspendStart)
@@ -43,50 +42,42 @@
             <th>
                 @Html.DisplayNameFor(model => model.SuspendEnd)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdentityUser)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ZipCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PickupDay)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OneTimePickup)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OneTimePickupUsed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MonthlyBalanceOwed)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SuspendStart)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SuspendEnd)
-            </td>
-            <td>
-                <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Address)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ZipCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OneTimePickup)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OneTimePickupUsed)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SuspendStart)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.SuspendEnd)
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.CustomerId">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.CustomerId">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
