--- a/TrashCollector/Views/Employees/Details.cshtml
+++ b/TrashCollector/Views/Employees/Details.cshtml
@@ -34,10 +34,33 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.ZipCode)
         </dd>
-
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.PickupDay)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PickupDay)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.OneTimePickup)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.OneTimePickup)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.OneTimePickupUsed)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.OneTimePickupUsed)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MonthlyBalanceOwed)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MonthlyBalanceOwed)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="PickupsForToday">Back to Pickups</a> |
+    <a asp-action="Index">Back to Pickups</a> |
     <a asp-action="ConfirmPickup" asp-route-id="@Model.CustomerId">Confirm Pickup</a>
 </div>
